Fix codacy errors